--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cli": "^13.3.5",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
+    "@angular/compiler-cli": "^13.3.8",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/localize": "~13.3.0",
@@ -23,20 +26,24 @@
     "@popperjs/core": "^2.10.2",
     "angular-ts-math": "^1.0.7",
     "bootstrap": "^5.1.3",
+    "express": "^4.18.1",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "rxjs": "~7.5.0",
     "rxjs-compat": "^6.6.7",
+    "save-dev": "0.0.1-security",
     "tslib": "^2.3.0",
+    "typescript": "~4.6.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.5",
-    "@angular/cli": "~13.3.5",
-    "@angular/compiler-cli": "~13.3.0",
+    "@angular/cli": "^13.3.5",
+    "@angular/compiler-cli": "^13.3.8",
     "@types/jasmine": "~3.10.0",
     "@types/lodash": "^4.14.182",
     "@types/node": "^12.11.1",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -44,5 +51,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.2"
+  },
+  "engines": {
+    "node": "14.18.0",
+    "npm": "6.14.15"
   }
 }
