--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "hf",
   "version": "0.0.0",
+  "engines": {
+    "node": "14.18.0",
+    "npm": "6.14.15"
+  },
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "heroku-postbuild": "ng build --prod"
@@ -51,9 +55,5 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.2"
-  },
-  "engines": {
-    "node": "14.18.0",
-    "npm": "6.14.15"
   }
 }
